# neuronswap

./: .gitignore  README.md  TODO.md  afuuuujuuui.py  example.py  example_indices.py  example_optimizer.py  example_permutate.py  example_permutation_matrices.py  example_skip_connections.py  fully_connected_test.py  input_swap.py  pyproject.toml  requirements.txt  skip.py  skip_connection_test.py  test.py
examples/: example_indices.py  example_optimizer.py  example_optimizer_convolution.py  example_permutation_matrices.py  example_skip_connections.py
neuronswap/: __init__.py  example_cuda.py  indexswap.py  matrixswap.py  modulexplore.py  nswap.py  optimizerindexswap.py  optimizermatrixswap.py  optimizerswap.py  permutate.py  skip_connections.py
tests/: test_fully_connected.py  test_indexswap.py  test_matrixswap.py  test_modulexplore.py  test_nswap.py  test_optiswap.py  test_permutate.py  test_skip_connection.py
