[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "neuronswap"
version = "1.0"
authors = [
  { name="gpilo", email="giommaria.pilo@telecom-paris.fr" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/giommariapilo/neuronswap"
Issues = "https://github.com/giommariapilo/neuronswap/issues"